--- a/package.json
+++ b/package.json
@@ -12,9 +12,19 @@
     "@babel/cli": "*",
     "@babel/core": "*",
     "@babel/node": "*",
-    "@babel/preset-env": "*"
+    "@babel/preset-env": "*",
+    "@babel/preset-flow": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.0.0",
+    "debug": "^4.0.1",
+    "eslint": "^5.12.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-flowtype": "^3.2.1",
+    "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-jest": "^22.1.3"
   },
-"dependencies": {
+  "dependencies": {
     "readline-sync": "^1.4.9"
   }
 }
